<resources>
    <string name="app_name">SATEM</string>
    <string name="title_activity_main">SATEM</string>
    <string name="action_settings">Opciones</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <string name="General">General</string>

    <string name="pref_header_general">Menú de Opciones</string>

    <!-- Modo Noche -->
    <string name="pref_title_night_mode">Modo Noche</string>
    <string name="pref_description_Night_mode">Activar o Desactivar el Modo Noche.</string>

    <!-- Activar Notificaciones -->
    <string name="pref_title_enable_notifications">Activar Notificaciones</string>

    <!-- Cambiar numero de ambulancia -->
    <string name="pref_title_set_ambulancia">Cambiar Número de Ambulancia</string>
    <string name="pref_description_set_ambulancia">Introduzca el número de ambulancia en el que estás atendiendo.</string>


    <!-- Regresar a Nuevo Paciente -->
    <string name="pref_title_backTo_newPatient">Regresar a Nuevo Cliente</string>
    <string name="pref_description_backTo_newPatient">Al enviar una emergencia, se le redireccionará al formulario de Nuevo Paciente.</string>
    <string name="NombrePaciente">Nombre</string>
    <string name="cedula">Cédula (SE = Sin Específicar)</string>
    <string name="sexo">Sexo:</string>
    <string name="sintomas">Síntomas</string>
    <string name="diagnostico">Diagnóstico</string>
    <string name="hospital">Hospital:</string>
    <string name="condVital">Condición Vital:</string>
    <string name="riesgo">Riesgo:</string>
    <string name="enviar">Enviar</string>
    <string name="NTU">No ha registrado pacientes en la emergencia actual.</string>
    <string name="usuario">E-Mail</string>
    <string name="password">Contraseña</string>
    <string name="numAmb">Número de Ambulancia</string>
    <string name="login">Iniciar Sesión</string>
    <string name="olvidosucontrasenha">¿Olvidó su Contraseña?</string>
    <string name="loginTitle">SATEM - Inicio de Sesión</string>
    <string name="occupiedOrInvalidAmbulance">* Atención La ambulancia seleccionada no tiene emergencias en curso o no está registrada en el sistema. *</string>
    <string name="noHistEmergencyAmbulance">La ambulancia actual no cuenta con emergencias registradas en el sistema.</string>
    <string name="noCurrentEmergencyAmbulance">    Esta ambulancia no tiene una emergencia en proceso en estos momentos.</string>

    <string-array name="sexoOpts">
        <item>Femenino</item>
        <item>Masculino</item>
        <item>No definido</item>
    </string-array>

    <string-array name="hospitalOpts">
        <item>Hospital Chiriqui</item>
        <item>Hospital Mae Lewis</item>
        <item>Hospital Materno Infantil José Domingo de Obaldia</item>
        <item>Hospital Regional Dr. Rafael Hernandez</item>
        <item>Policlínica Gustavo A. Ross</item>
    </string-array>

    <string-array name="condVitalOpts">
        <item>Estable</item>
        <item>Crítico</item>
        <item>Fallecido</item>
    </string-array>

    <string-array name="riesgoOpts">
        <item>Bajo</item>
        <item>Medio</item>
        <item>Alto</item>
    </string-array>

    <string name="logout">Cerrar Sesión</string>
    <string name="lugar">Lugar del Accidente</string>
    <string name="emergenciaActual">Emergencia Actual:</string>
    <string name="suceso">Suceso</string>
    <string name="action_profle">Mi Perfil</string>
    <string name="updateLabel">Actualizar Diagnóstico</string>
    <string name="title_activity_profile">profileActivity</string>
    <string name="large_text">Profile</string>


</resources>
