<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editTextNombrePaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/NombrePaciente"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextCedula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/cedula"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:entries="@array/sexoOpts"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/editTextLugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lugar"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextSintomas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/sintomas"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/editTextDiagnostico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/diagnostico"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textViewCondVital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/condVital"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerCondVital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:entries="@array/condVitalOpts"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/textViewRiesgo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/riesgo"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerRiesgo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:entries="@array/riesgoOpts"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/buttonEnviar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>
</ScrollView>
