<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.r_2g_.satemapp.LoginActivity">

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_above="@+id/editTextPassword"
        android:layout_marginBottom="21dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/editTextNAmbulancia"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="73dp"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/editTextNAmbulancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonForget"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="55dp"
        android:ems="10"
        android:hint="@string/numAmb"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonLogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:onClick="onClick"
        android:text="@string/login" />

    <Button
        android:id="@+id/buttonForget"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvidosucontrasenha"
        android:textColor="@color/colorForget"
        android:layout_above="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextUsuario"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/loginTitle"
        android:textColor="@color/colorTitle"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />
</RelativeLayout>
